--- a/package.json
+++ b/package.json
@@ -4,11 +4,192 @@
   "description": "primeras automatizaciones cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules\\.bin\\cypress run",
+    "testChrome": "npm run test -- --browser chrome",
+    "testDashboardChromeHeadless" : "npm run test -- --record --key ebb01e5b-65ce-478b-a1f9-3f0b4dc26e63 --browser chrome --headless",
+    "testConjunto1": "npm run testDashboardChromeHeadless -- --spec \"cypress\\integration\\examples\\Conjunto1\\*\""
   },
   "author": "Conti Adrian",
   "license": "ISC",
+  "devDependencies": {
+    "cypress": "^9.7.0",
+    "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor":{
+    "nonGlobalSlepDefinitions":true
+  },
   "dependencies": {
-    "cypress": "^9.7.0"
+    "ansi-escapes": "^3.2.0",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^2.1.1",
+    "assert-plus": "^1.0.0",
+    "asn1": "^0.2.4",
+    "arch": "^2.2.0",
+    "ansi-styles": "^4.3.0",
+    "any-observable": "^0.3.0",
+    "asynckit": "^0.4.0",
+    "async": "^3.2.0",
+    "at-least-node": "^1.0.0",
+    "aws-sign2": "^0.7.0",
+    "bcrypt-pbkdf": "^1.0.2",
+    "blob-util": "^2.0.2",
+    "aws4": "^1.11.0",
+    "balanced-match": "^1.0.0",
+    "bluebird": "^3.7.2",
+    "brace-expansion": "^1.1.11",
+    "buffer-from": "^1.1.1",
+    "cachedir": "^2.3.0",
+    "buffer-crc32": "^0.2.13",
+    "check-more-types": "^2.24.0",
+    "caseless": "^0.12.0",
+    "chalk": "^4.1.0",
+    "cli-cursor": "^1.0.2",
+    "ci-info": "^2.0.0",
+    "color-convert": "^2.0.1",
+    "code-point-at": "^1.1.0",
+    "cli-table3": "^0.6.0",
+    "cli-truncate": "^0.2.1",
+    "colors": "^1.4.0",
+    "combined-stream": "^1.0.8",
+    "commander": "^5.1.0",
+    "color-name": "^1.1.4",
+    "common-tags": "^1.8.0",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "dashdash": "^1.14.1",
+    "cross-spawn": "^7.0.3",
+    "date-fns": "^1.30.1",
+    "dayjs": "^1.10.4",
+    "core-util-is": "^1.0.2",
+    "debug": "^4.3.2",
+    "end-of-stream": "^1.4.4",
+    "delayed-stream": "^1.0.0",
+    "eventemitter2": "^6.4.3",
+    "emoji-regex": "^8.0.0",
+    "ecc-jsbn": "^0.1.2",
+    "execa": "^4.1.0",
+    "elegant-spinner": "^1.0.1",
+    "escape-string-regexp": "^1.0.5",
+    "exit-hook": "^1.1.1",
+    "executable": "^4.1.1",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "extract-zip": "^1.7.0",
+    "figures": "^1.7.0",
+    "form-data": "^2.3.3",
+    "forever-agent": "^0.6.1",
+    "fd-slicer": "^1.1.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fs-extra": "^9.1.0",
+    "get-stream": "^5.2.0",
+    "getpass": "^0.1.7",
+    "fs.realpath": "^1.0.0",
+    "global-dirs": "^2.1.0",
+    "graceful-fs": "^4.2.6",
+    "har-validator": "^5.1.5",
+    "glob": "^7.1.6",
+    "getos": "^3.2.1",
+    "har-schema": "^2.0.0",
+    "has-ansi": "^2.0.0",
+    "human-signals": "^1.1.1",
+    "has-flag": "^4.0.0",
+    "http-signature": "^1.2.0",
+    "indent-string": "^3.2.0",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.7",
+    "inflight": "^1.0.6",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-ci": "^2.0.0",
+    "is-installed-globally": "^0.3.2",
+    "is-path-inside": "^3.0.2",
+    "is-observable": "^1.1.0",
+    "is-promise": "^2.2.2",
+    "is-stream": "^2.0.0",
+    "isexe": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "isarray": "^1.0.0",
+    "isstream": "^0.1.2",
+    "json-stringify-safe": "^5.0.1",
+    "jsbn": "^0.1.1",
+    "jsonfile": "^6.1.0",
+    "jsprim": "^1.4.1",
+    "json-schema": "^0.2.3",
+    "lazy-ass": "^1.6.0",
+    "listr": "^0.14.3",
+    "json-schema-traverse": "^0.4.1",
+    "listr-silent-renderer": "^1.1.1",
+    "listr-update-renderer": "^0.5.0",
+    "listr-verbose-renderer": "^0.5.0",
+    "log-symbols": "^4.0.0",
+    "lodash.once": "^4.1.1",
+    "log-update": "^2.3.0",
+    "lodash": "^4.17.20",
+    "mime-types": "^2.1.29",
+    "merge-stream": "^2.0.0",
+    "mime-db": "^1.46.0",
+    "minimatch": "^3.0.4",
+    "moment": "^2.29.1",
+    "mkdirp": "^0.5.5",
+    "mimic-fn": "^2.1.0",
+    "minimist": "^1.2.5",
+    "ms": "^2.1.2",
+    "npm-run-path": "^4.0.1",
+    "oauth-sign": "^0.9.0",
+    "number-is-nan": "^1.0.1",
+    "once": "^1.4.0",
+    "object-assign": "^4.1.1",
+    "path-key": "^3.1.1",
+    "onetime": "^5.1.2",
+    "ospath": "^1.2.2",
+    "path-is-absolute": "^1.0.1",
+    "process-nextick-args": "^2.0.1",
+    "pend": "^1.2.0",
+    "p-map": "^2.1.0",
+    "performance-now": "^2.1.0",
+    "pify": "^2.3.0",
+    "punycode": "^2.1.1",
+    "pretty-bytes": "^5.5.0",
+    "psl": "^1.8.0",
+    "pump": "^3.0.0",
+    "querystring": "^0.2.0",
+    "request-progress": "^3.0.0",
+    "ramda": "^0.26.1",
+    "qs": "^6.5.2",
+    "readable-stream": "^2.3.7",
+    "restore-cursor": "^1.0.1",
+    "rxjs": "^6.6.3",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "shebang-regex": "^3.0.0",
+    "slice-ansi": "^0.0.4",
+    "shebang-command": "^2.0.0",
+    "signal-exit": "^3.0.3",
+    "sshpk": "^1.16.1",
+    "supports-color": "^7.2.0",
+    "string-width": "^4.2.0",
+    "strip-ansi": "^3.0.1",
+    "strip-final-newline": "^2.0.0",
+    "string_decoder": "^1.1.1",
+    "tmp": "^0.2.1",
+    "symbol-observable": "^1.2.0",
+    "throttleit": "^1.0.0",
+    "tslib": "^1.14.1",
+    "tunnel-agent": "^0.6.0",
+    "tough-cookie": "^2.5.0",
+    "tweetnacl": "^0.14.5",
+    "typedarray": "^0.0.6",
+    "universalify": "^2.0.0",
+    "util-deprecate": "^1.0.2",
+    "url": "^0.11.0",
+    "untildify": "^4.0.0",
+    "uri-js": "^4.4.1",
+    "verror": "^1.10.0",
+    "which": "^2.0.2",
+    "wrappy": "^1.0.2",
+    "uuid": "^3.4.0",
+    "yauzl": "^2.10.0",
+    "wrap-ansi": "^3.0.1"
   }
 }
